# Ferroload

./: .gitignore  Cargo.toml  LICENSE  README.md  TROUBLESHOOTING.md  ferroload-rebuild.bat  ferroload.bat
.claude/: settings.local.json
.github/workflows/: release.yml
crates/ferroload-api/: Cargo.toml
crates/ferroload-api/src/: db.rs  lib.rs  startup.rs  state.rs  ws.rs
crates/ferroload-api/src/routes/: ai.rs  mod.rs  rss.rs  settings.rs  stats.rs  torrents.rs
crates/ferroload-cli/: Cargo.toml  build.rs
crates/ferroload-cli/src/: main.rs
crates/ferroload-engine/: Cargo.toml
crates/ferroload-engine/src/: events.rs  lib.rs  models.rs  session.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: rss.ts  settings.ts  stats.ts  torrents.ts  ws.ts
web/src/components/: AddTorrentModal.tsx  AiSidebar.tsx  Layout.tsx  SpeedGraph.tsx  TorrentDetailPanel.tsx  TorrentList.tsx  TorrentRow.tsx
web/src/hooks/: useStats.ts  useTorrents.ts  useWebSocket.ts
web/src/lib/: utils.ts
web/src/pages/: AboutPage.tsx  AiPage.tsx  Dashboard.tsx  RssManager.tsx  SettingsPage.tsx
web/src/stores/: settingsStore.ts  torrentStore.ts
web/src/types/: index.ts
