[workspace]
members = [
    "crates/ferroload-engine",
    "crates/ferroload-api",
    "crates/ferroload-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
actix-web = "4"
actix-ws = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
