[package]
name = "ferroload-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
librqbit = { version = "7", default-features = false, features = ["default"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
