[package]
name = "ferroload-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# bencode parsing for .torrent files (no external BitTorrent engine needed)
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = { version = "0.10", features = ["std"] }
hex = "0.4"
